# FastAPITest

./: .env  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_04_1250-454482082775_create_products_table.py  2024_08_05_1218-9745ba8d431f_create_table_user.py  2024_08_05_1229-3d715068cf44_create_table_post.py  2024_08_06_1235-717ff7ab73f7_create_table_profile.py  2024_08_09_1222-e6a8ddc02237_create_table_order.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
